fix: Align icons for calculator fields correctly.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -275,6 +275,9 @@ select
     left: 1px;
     top:1px;
 
+    display: flex;
+    justify-content: center;
+
     width: 38px;
     height: 38px;
 
